# hypertrending

./: DATAFORSEO_API_REFERENCE.md  README.md  check_page.js  claude-agent.js  monitor.js  package-lock.json
.claude/: settings.json  settings.local.json  settings.local.json_bak
frontend/: .env  package-lock.json  package.json  vite.config.ts
frontend/.claude/: settings.local.json
frontend/src/: App.tsx  index.css
frontend/src/components/: CreateMissionModal.tsx  Layout.tsx  LiveMonitorPanel.tsx  Sparkline.tsx  StatCard.tsx  ThemeToggle.tsx  (+2 more)
ingestion/: .env.example  README.md  add_niche_column.py  api.py  fetch_trends.py  pyproject.toml  run_migration.py
ingestion/src/: __init__.py  cli.py  config.py
ingestion/src/fetchers/: __init__.py  base.py  google_trends.py
ingestion/src/runners/: __init__.py  mission_runner.py
ingestion/src/storage/: __init__.py  supabase_client.py
ingestion/src/utils/: __init__.py  logging.py
supabase/: config.toml
supabase/.temp/: pooler-url  project-ref
supabase/migrations/: 20241207000000_full_schema.sql  20241207000001_fix_sources_rls.sql  20241207000002_fix_keywords_rls.sql  20241207000003_fix_timeseries_rls.sql  20241207000004_fix_missions_rls.sql  20241207000005_markets_table.sql  20241207000006_fix_workspace_trigger.sql  20241207000007_fix_all_constraints.sql  20241207000008_saas_table.sql  20241207000009_seed_markets_niches.sql
supabase/queries/: 01_leaderboards.sql  02_trend_history.sql  03_aggregations.sql  04_dashboard.sql  05_search_discovery.sql
supabase/seed/: 001_sources.sql  002_markets_niches.sql
(+13 files in other folders)
